--- a/style.css
+++ b/style.css
@@ -6,10 +6,96 @@
   padding: 0;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+}
+
 ul {
   list-style: none;
 }
 
 .cards-wrapper {
   display: grid;
+  grid-template-columns: auto auto auto;
+  margin: 2rem;
+  padding: 2rem 1rem;
+}
+
+.card {
+  padding: 1rem 2rem;
+  width: 300px;
+  height: 350px;
+  position: relative;
+  background-color: rgb(241, 234, 234);
+  box-shadow: 0px 4px 10px rgb(194, 193, 193);
+  transition: 0.5x;
+}
+
+.card:hover {
+  box-shadow: 0px 7px 10px rgb(194, 193, 193);
+}
+
+.price {
+  position: absolute;
+  padding-top: 1rem;
+  width: 90px;
+  height: 120px;
+  right: 2rem;
+  top: -1.5rem;
+  background-color: rgb(134, 132, 132);
+  color: white;
+  text-align: center;
+}
+
+.price::after,
+.price::before {
+  content: "";
+  position: absolute;
+}
+
+.price::after {
+  width: 100%;
+  height: 15px;
+  background-color: rgb(241, 234, 234);
+  left: 0;
+  bottom: 0;
+  clip-path: polygon(0 100%, 50% 0, 100% 100%);
+}
+
+.price::before {
+  width: 15px;
+  height: 24px;
+  background-color: rgb(109, 109, 109);
+  top: 0;
+  left: -15px;
+  clip-path: polygon(0 100%, 100% 0, 100% 100%);
+}
+
+h3 {
+  display: block;
+  margin-top: 6rem;
+  padding: 0.5rem;
+}
+
+.card-list {
+  padding: 0.5rem;
+  font-size: 0.85rem;
+  margin-bottom: 0.5rem;
+}
+
+button {
+  margin: 0.5rem;
+  padding: 0.8rem;
+  width: 100%;
+  background-color: rgb(109, 109, 109);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 0.7rem;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: 0px 4px 10px rgb(194, 193, 193);
 }
